tests/machine/x/c/map_assign.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/map_assign.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/map_assign.c:59:26: warning: passing argument 2 of ‘map_int_bool_put’ makes integer from pointer without a cast [-Wint-conversion]
   59 |   map_int_bool_put(&_t1, "alice", 1);
      |                          ^~~~~~~
      |                          |
      |                          char *
/workspace/mochi/tests/machine/x/c/map_assign.c:38:51: note: expected ‘int’ but argument is of type ‘char *’
   38 | static void map_int_bool_put(map_int_bool *m, int key, int value) {
      |                                               ~~~~^~~
/workspace/mochi/tests/machine/x/c/map_assign.c:60:16: error: incompatible types when initializing type ‘int’ using type ‘map_int_bool’
   60 |   int scores = _t1;
      |                ^~~
/workspace/mochi/tests/machine/x/c/map_assign.c:61:9: error: request for member ‘data’ in something not a structure or union
   61 |   scores.data["bob"] = 2;
      |         ^
/workspace/mochi/tests/machine/x/c/map_assign.c:62:24: error: request for member ‘data’ in something not a structure or union
   62 |   printf("%d\n", scores.data["bob"]);
      |                        ^

   1: #include <stdio.h>
